authorization for upload page

--- a/CS487Project/videos/templates/videos/index.html
+++ b/CS487Project/videos/templates/videos/index.html
@@ -1,3 +1,7 @@
+{% if user.is_authenticated %}
+        <p>{{ user.username }}</p>
+{% endif %}
+
 {% for video in video_list %}
         <p><a href="{% url 'videos:view' video.id %}">{{ video.title }}</a></p>
 {% endfor %}
