--- a/CS487Project/videos/templates/videos/search_results.html
+++ b/CS487Project/videos/templates/videos/search_results.html
@@ -7,7 +7,10 @@
         <input type="text" name="query" value="{{ query }}" >
         <input type="submit" value="Search" >
 </form>
-<p>Showing search results for {{ query }}</p>
-<p>...but there are no actual search results here yet, though.</p>
+<p>Showing search results for "{{ query }}"</p>
+<ul>
+  <li>Testvid</li>
+  <li>Testvid 2</li>
+</ul>
 </body>
 </html>
