--- a/CS487Project/videos/templates/videos/view.html
+++ b/CS487Project/videos/templates/videos/view.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>{{ video.title }}</title>
-<meta name="description" content="{{ video.description }}">
-<meta name="keywords" content="{{ video.keywords.all|join:", " }}">
-<meta name="author" content="{{ video.authors.all|join:", " }}">
-<meta charset="UTF-8">
-</head>
-<body>
+{% extends "videos/master.html" %}
 
-<h1 style="text-align:center">{{ video.title }}</h1>
+{% block page_title %}{{ video.title }}{% endblock %}
+{% block description %}{{ video.description }}{% endblock %}
+{% block keywords %}{{ video.keywords.all|join:", " }}{% endblock %}
+{% block author %}{{ video.authors.all|join:", " }}{% endblock %}
 
+{% block title %}{{ video.title }}{% endblock %}
+{% block content %}
 <p align="center">
 <video src="{{ video.video.url }}" width="960" height="720" controls="controls">
 Your browser does not support the video tag.
@@ -66,5 +62,6 @@ function makeView() {
 }
 makeView();
 </script>
+{% endblock %}
 </body>
 </html>
