Added CSS rules. Dramatically improved our site's visual appeal.

--- a/CS487Project/videos/templates/registration/logged_out.html
+++ b/CS487Project/videos/templates/registration/logged_out.html
@@ -1,1 +1,7 @@
+{% extends "videos/master.html" %}
+
+{% block page_title %}Logged out{% endblock %}
+
+{% block content %}
 Thank you for stopping by.
+{% endblock %}
