--- a/CS487Project/videos/templates/registration/login.html
+++ b/CS487Project/videos/templates/registration/login.html
@@ -1,3 +1,8 @@
+{% extends "videos/master.html" %}
+
+{% block page_title %}login{% endblock %}
+
+{% block content %}
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -18,3 +23,4 @@
         <input type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
 </form>
+{% endblock %}
