--- a/CS487Project/videos/templates/videos/master.html
+++ b/CS487Project/videos/templates/videos/master.html
@@ -3,15 +3,42 @@
 <head>
 <title>{% block page_title %}{% endblock %}</title>
 
-<link rel="/static/style.css" type="text/css" >
+<link rel="stylesheet" href="/media/style.css" type="text/css" >
 <meta name="description" content="{% block description %}{% endblock %}">
 <meta name="keywords" content="{% block keywords %}{% endblock %}">
 <meta name="author" content="{% block author %}{% endblock %}">
 <meta charset="UTF-8">
 </head>
 <body>
+<div id="head">
+        <img src="/media/logo.png" width="400" height="180" >
+        <div id="login">
+        {% if user.is_authenticated %}
+                Hello {{ user.username }}<br>
+                <a href="/accounts/logout">logout</a>
+        {% else %}
+                Welcome to ResearchTube.<br>
+                <a href="/accounts/login">login</a>
+        {% endif %}
+        </div>
+        <div id="nav">
+                <a href="">Home</a>
+                <div>
+                        <form action="{% url 'videos:search' %}" method="get">
+                                <input type="text" name="query">
+                                <input type="submit" value="Search">
+                        </form>
+                </div>
+                <a href="">Advanced Search</a>
+                {% if perms.videos.add_video %}
+                        <a href="">Upload</a>
+                {% endif %}
+        </div>
+</div>
+<div id="body">
 <h1 class="title">{% block title %}{% endblock %}</h1>
 {% block content %}
 {% endblock %}
+</div>
 </body>
 </html>
