Fixed the links

--- a/CS487Project/videos/templates/videos/index.html
+++ b/CS487Project/videos/templates/videos/index.html
@@ -4,7 +4,9 @@
 
 {% block title %}Videos{% endblock %}
 {% block content %}
+        <ul>
         {% for video in video_list %}
-                <p><a href="{% url 'videos:view' video.id %}">{{ video.title }}</a></p>
+                <li><a href="{% url 'videos:view' video.id %}">{{ video.title }}</a></li>
         {% endfor %}
+        </li>
 {% endblock %}
