--- a/CS487Project/videos/templates/videos/master.html
+++ b/CS487Project/videos/templates/videos/master.html
@@ -22,16 +22,16 @@
         {% endif %}
         </div>
         <div id="nav">
-                <a href="">Home</a>
+                <a href="{% url 'videos:index' %}">Home</a>
                 <div>
                         <form action="{% url 'videos:search' %}" method="get">
                                 <input type="text" name="query">
                                 <input type="submit" value="Search">
                         </form>
                 </div>
-                <a href="">Advanced Search</a>
+                <a href="{% url 'videos:search' %}">Advanced Search</a>
                 {% if perms.videos.add_video %}
-                        <a href="">Upload</a>
+                <a href="{% url 'videos:uploader' %}">Upload</a>
                 {% endif %}
         </div>
 </div>
