Added user registration page

--- a/CS487Project/videos/templates/videos/master.html
+++ b/CS487Project/videos/templates/videos/master.html
@@ -18,7 +18,7 @@
                 <a href="/accounts/logout">logout</a>
         {% else %}
                 Welcome to ResearchTube.<br>
-                <a href="/accounts/login">login</a>
+                <a href="/accounts/login">login</a> or <a href="/accounts/register">register</a>
         {% endif %}
         </div>
         <div id="nav">
