Cleaned up search code. Updated result templates

--- a/CS487Project/videos/templates/videos/search_results.html
+++ b/CS487Project/videos/templates/videos/search_results.html
@@ -4,10 +4,12 @@
 
 {% block content %}
 <form action="{% url 'videos:search' %}" method="get" >
-        <input type="text" name="query" value="{{ query }}" >
+        Keywords: <input type="text" name="query" value="{{ query }}" autofocus="autofocus" ><br>
+        Author: <input type="text" name="aquery" value="{{ aquery }}" ><br>
+        Journal: <input type="text" name="jquery" value="{{ jquery }}" ><br>
         <input type="submit" value="Search" >
 </form>
-<p>Showing search results for "{{ query }}"</p>
+<p>Showing search results {% if query %}for "{{ query }}" {%endif%}{% if aquery %}by "{{aquery}}" {% endif %}{% if jquery %}in "{{jquery}}"{% endif %}</p>
 <ul>
       {% for result in results %}
       <li><a href={% url 'videos:view' result.id %}>{{ result }}</a></li>
