--- a/CS487Project/videos/templates/videos/upload.html
+++ b/CS487Project/videos/templates/videos/upload.html
@@ -4,12 +4,10 @@
 
 {% block title %}Upload a video{% endblock %}
 {% block content %}
-<form action="no idea what to put here" method="get">
-  Upload file: <input type="file" name="video"><br>
-  Title: <input type="text" name="title"><br>
-  Authors: <input type="text" name="authors"><br>
-  URL of article: <input type="url" name="article"><br>
-  Keywords: <input type="text" name="keywords"><br>
-  <input type="submit" name="Submit">
-</form>
+{% for field in form %}
+<tr>
+  <td>{{ field.label_tag }}</td>
+  <td>{{ field }}</td>
+</tr>
+{% endfor %}
 {% endblock %}
