--- a/CS487Project/videos/templates/videos/upload.html
+++ b/CS487Project/videos/templates/videos/upload.html
@@ -4,6 +4,8 @@
 
 {% block title %}Upload a video{% endblock %}
 {% block content %}
+<form action="/videos/upload_success.html" method="post">
+{% csrf_token %}
 {% for field in form %}
 <tr>
   <td>{{ field.label_tag }}</td>
@@ -12,4 +14,6 @@
   <br><br>
 </tr>
 {% endfor %}
+<input type="submit" value="Submit" />
+</form>
 {% endblock %}
