Added form error message

--- a/CS487Project/videos/templates/registration/password_change_form.html
+++ b/CS487Project/videos/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Password Change{% endblock %}
+{% block title %}Password Change{% endblock %}
 
 {% block content %}
 <form method="POST" action="{% url 'django.contrib.auth.views.password_change_done' %}">
