--- a/CS487Project/videos/templates/registration/register.html
+++ b/CS487Project/videos/templates/registration/register.html
@@ -1,8 +1,8 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Create an account{% endblock %}
-
 {% block title %}Create an account{% endblock %}
+
+{% block header %}Create an account{% endblock %}
 
 {% block content %}
 <form action="" method="post">
