--- a/CS487Project/videos/templates/videos/index.html
+++ b/CS487Project/videos/templates/videos/index.html
@@ -1,8 +1,8 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Videos{% endblock %}
-
 {% block title %}Videos{% endblock %}
+
+{% block header %}Videos{% endblock %}
 {% block content %}
         <ul>
         {% for video in video_list %}
