--- a/CS487Project/videos/templates/videos/search.html
+++ b/CS487Project/videos/templates/videos/search.html
@@ -1,6 +1,6 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Search{% endblock %}
+{% block title %}Search{% endblock %}
 
 {% block content %}
 <form action="{% url 'videos:search' %}" method="get" >
