--- a/CS487Project/videos/templates/registration/logged_out.html
+++ b/CS487Project/videos/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Logged out{% endblock %}
+{% block title %}Logged out{% endblock %}
 
 {% block content %}
 Thank you for stopping by.
