--- a/CS487Project/videos/templates/registration/login.html
+++ b/CS487Project/videos/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}login{% endblock %}
+{% block title %}login{% endblock %}
 
 {% block content %}
 {% if form.errors %}
@@ -10,14 +10,7 @@
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
         {% csrf_token %}
         <table>
-                <tr>
-                        <td>{{ form.username.label_tag }}</td>
-                        <td>{{ form.username }}</td>
-                </tr>
-                <tr>
-                        <td>{{ form.password.label_tag }}</td>
-                        <td>{{ form.password }}</td>
-                </tr>
+                {{ form }}
         </table>
 
         <input type="submit" value="login" />
