--- a/CS487Project/videos/templates/registration/password_change_done.html
+++ b/CS487Project/videos/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
 {% extends "videos/master.html" %}
 
-{% block page_title %}Password Reset{% endblock %}
+{% block title %}Password Reset{% endblock %}
 
 {% block content %}
 Your password has been reset.
