--- a/CS487Project/videos/templates/videos/upload.html
+++ b/CS487Project/videos/templates/videos/upload.html
@@ -4,7 +4,7 @@
 
 {% block header %}Upload a video{% endblock %}
 {% block content %}
-<form action="/videos/upload/" method="post">
+<form enctype="multipart/form-data" action="" method="post">
 {% csrf_token %}
 {{ form.errors }}
 {% for field in form %}
