Fixed video upload page.

--- a/CS487Project/videos/templates/videos/upload_success.html
+++ b/CS487Project/videos/templates/videos/upload_success.html
@@ -1,3 +1,5 @@
-<body>
-  <p>Upload successful!</p>
-</body>
+{% extends "videos/master.html" %}
+
+{% block title %}Upload successful{% endblock %}
+
+{% block header %}Upload successful!{% endblock %}
