--- a/CS487Project/videos/templates/videos/view.html
+++ b/CS487Project/videos/templates/videos/view.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 {% if perms.modify_video or video.uploader == user %}
-
+{% load comments %}
 <div id="toolbox"><a href="{% url 'videos:editVideo' video.id %}">edit</a></div>
 
 {% endif %}
@@ -20,7 +20,31 @@ Your browser does not support the video tag.
 </video>
 </p>
 
+
+{% render_comment_list for video %} 		
+<div>
+        {% if user.is_authenticated %}
+                
+               {% get_comment_form for video as form %}
+<table>
+  <form action="{% comment_form_target %}" method="post">
+    {% csrf_token %}
+    {{ form }}
+    <tr>
+      <td colspan="2">
+        <input type="submit" name="submit" value="Post">
+      </td>
+    </tr>
+  </form>
+</table>
+        {% else %}
+                Log in to comment.<br>
+                <a href="/accounts/login">login</a> or <a href="/accounts/register">register</a>
+        {% endif %}
+        </div>
+
 <div class="right">
+
 {% if perms.add_rating %}
 <form method="post" action="{% url 'videos:createRating' video.id 'star' %}" target="_blank">
         {% csrf_token %}
