--- a/CS487Project/videos/templates/contact/contact_form.html
+++ b/CS487Project/videos/templates/contact/contact_form.html
@@ -3,17 +3,19 @@
 {% block title %}Contact us{% endblock %}
 
 {% block content %}
-	{% if errors %}
-		<ul>
-			{% for error in errors %}
-			<li>{{ error }}</li>
-			{% endfor %}
-		</ul>
+	<h1>Contact us</h1>
+
+	{% if form.errors %}
+		<p style="color: red;">
+			Please correct the error{{ form.errors|pluralize }} below.
+		</p>
 	{% endif %}
-	<form action="/contact/" method="post">{% csrf_token %}
-		<p>Subject: <input type="text" name="subject"></p>
-		<p>Your e-mail (optional): <input type="text" name="email"></p>
-		<p>Message: <textarea name="message" rows="10" cols="50"></textarea></p>
+
+	<form action="" method="post">
+		{% csrf_token %}
+		<table>
+			{{ form.as_table }}
+		</table>
 		<input type="submit" value="Submit">
 	</form>
 {% endblock %}
