getting a bit closer, flags comments kinda

--- a/CS487Project/videos/templates/comments/list.html
+++ b/CS487Project/videos/templates/comments/list.html
@@ -5,7 +5,7 @@
     </dt>
     <dd>
         <p>{{ comment.comment }}</p>
-		<p>{{ comment.user }}</p>
+		<a href="/videos/">Flag</a>			#Need to change this to link for flag of comment by comment id
     </dd>
   {% endfor %}
 </dl>
